--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -118,6 +118,6 @@
 
 .woocommerce .banner_menu_shop .banner_menu_shop__img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: auto;
+  max-height: 100%;
 }
