:sparkles: Change Dev Skdy

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: Skullcandy
-Text Domain: skullcandy
+Theme Name: Skullcandy Dev
+Text Domain: skullcandy Dev
 Version: 1.1
 Requires at least: 4.7
 Requires PHP: 5.2.4
