:lipstick: Correct color in theme support

--- a/src/scss/_megamenu.scss
+++ b/src/scss/_megamenu.scss
@@ -387,7 +387,7 @@
         margin-bottom: 1rem;
 
         a {
-          color: #fff;
+          color: #000;
           text-transform: uppercase;
           font-size: 1rem;
           line-height: 1.6rem;
