--- a/src/scss/_megamenu.scss
+++ b/src/scss/_megamenu.scss
@@ -319,7 +319,9 @@
 
         .list-cart {
           margin: 1.5rem;
-
+          .list-cart__no-product{
+            font-style: italic;
+          }
           a {
             color: #000;
             text-decoration: none;
