--- a/src/scss/_megamenu.scss
+++ b/src/scss/_megamenu.scss
@@ -381,7 +381,7 @@
 
 @media (max-width: 768px){
   .cart-wrapper .content{
-    padding: 2rem 2rem;
+    padding: 1.5rem 1.5rem;
 
     .mini-cart-wrapper{
       width: 100%;
@@ -391,13 +391,21 @@
         width: 100%;
         max-width: 100%;
 
+        .head .title{
+          font-size: 18px;
+        }
+
         .head .close{
-          width: 30px;
-          height: 30px;
+          width: 25px;
+          height: 25px;
         }
       }
-    }
 
+      .actions{
+        align-items: center;
+        justify-content: space-evenly;
+      }
+    }
   }
 }
 
