:lipstick: Update web view in mini-cart

--- a/src/scss/_megamenu.scss
+++ b/src/scss/_megamenu.scss
@@ -362,6 +362,7 @@
       .actions {
         display: flex;
         align-items: center;
+        justify-content: space-evenly;
 
         .btn {
           margin-right: 1rem;
