:lipstick: Modificy remove style

--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -43,7 +43,7 @@
         }
 
 
-        div {
+        .product-name__info {
           display: flex;
           flex-direction: column;
           gap: 0.5rem;
