--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -21,9 +21,20 @@
     font-family: $titleFont;
     @media (max-width: 768px) {
       font-size: 2.25rem;
-      padding: 2rem 0;
+      padding: 1.5rem 0;
     }
   }
+}
+
+.remove__div{
+  padding: 10px 18px;
+  border: 1px solid black;
+  background-color: black;
+  color: white;
+}
+
+.product-name__title, .product-quantity__title, .product-subtotal__title{
+  font-size: 1.25rem;
 }
 
 .woocommerce-cart-form__contents {
@@ -54,11 +65,14 @@
         img {
           width: 200px;
           mix-blend-mode: multiply;
+          max-width: 100px;
         }
 
         p {
           font-size: 1rem;
         }
+
+
 
         .post-title {
           font-weight: bold;
