--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -190,3 +190,26 @@
     }
   }
 }
+
+
+.cart-custom-message {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.cart-custom-message__button {
+  @include btn(#fff, #383838, #2c2c2d);
+  color: #fff !important;
+  padding: 0 2rem !important;
+  @media (max-width: 768px) {
+    width: 100%;
+    padding: 0 .3rem !important;
+  }
+}
