--- a/src/scss/_megamenubk.scss
+++ b/src/scss/_megamenubk.scss
@@ -273,7 +273,7 @@
         }
 
         .list-cart {
-          margin: 1.5rem;
+          // margin: 1.5rem;
 
           a {
             color: #000;
