:lipstick: Update first info customer

--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -286,9 +286,11 @@
 #billing_country_field,
 #billing_district_field,
 #payment,
-.billing-step {
+.shipping-step {
   display: none;
 }
+
+
 
 .shop_table.woocommerce-checkout-review-order-table {
   position: absolute;
