:sparkles: \Testing third try

--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -294,6 +294,10 @@
 
 .shop_table.woocommerce-checkout-review-order-table {
 
+  #see-more{
+    text-decoration: none;
+  }
+
   .order-review__general-title{
     font-size: 1rem;
   }
