:lipstick: Add styling to general container

--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -204,6 +204,24 @@
 .checkout.woocommerce-checkout {
   position: relative;
   margin-bottom: 2rem;
+
+  .order_review_main{
+    display: flex;
+    justify-content: space-between;
+
+    .order-review__general-title{
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
+
+    .order-review__toggle{
+      .order-review__toggle__btn{
+        @include btn(#fff, #383838, #2c2c2d);
+        color: #fff !important;
+        padding: 0 2rem !important;
+      }
+    }
+  }
 }
 
 .woocommerce-form-coupon-toggle,
