:lipstick: Set full width in table footer

--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -129,6 +129,18 @@
       }
     }
 
+    tfoot{
+      tr{
+        width: 100%;
+      }
+      th{
+        width: 100%;
+      }
+      td{
+        width: 100%;
+      }
+    }
+
     .product-image {
       width: 90px;
       display: inline-block;
