--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -287,8 +287,9 @@
   }
 
  .checkout_additional_info__element__btn{
-  text-decoration: none;
   color: #000;
+  text-decoration: underline;
+  font-weight: 700;
  }
 
 }
