--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -284,6 +284,7 @@
     display: flex;
     gap: 10px;
     padding: 10px;
+    align-items: center;
   }
 
  .checkout_additional_info__element__btn{
