:lipstick: Wrap elements in additional info

--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -285,6 +285,7 @@
     gap: 10px;
     padding: 10px;
     align-items: center;
+    flex-wrap: wrap;
   }
 
  .checkout_additional_info__element__btn{
