--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -173,6 +173,10 @@
           margin-top: 1rem;
         }
 
+        .Wcmlim_prefloc_box{
+          display: none!important;
+        }
+
         .woocommerce-variation-add-to-cart {
           display: flex;
           flex-wrap: wrap;
