:lipstick: Remove cart

--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -173,9 +173,9 @@
           margin-top: 1rem;
         }
 
-        .Wcmlim_prefloc_box{
-          display: none!important;
-        }
+        // .Wcmlim_prefloc_box{
+        //   display: none!important;
+        // }
 
         .woocommerce-variation-add-to-cart {
           display: flex;
