:lipstick: Update hiding in choosing product

--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -175,6 +175,7 @@
 
         .Wcmlim_prefloc_box{
           display: none!important;
+          border: 1px solid #000;
         }
 
         .woocommerce-variation-add-to-cart {
