:lipstick: Hide product shipment

--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -174,7 +174,7 @@
         }
 
         .Wcmlim_prefloc_box{
-          // display: none!important;
+          display: none!important;
           border: 1px solid #000;
         }
 
