--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -1303,6 +1303,13 @@ body.layout-2 {
   width: 100%;
   color: #fff;
   margin: 1rem 0;
+  .no-stock__container{
+    font-size: 1.2rem;
+    font-weight: 500;
+    padding: 1rem;
+    text-align: center;
+    color: red
+  }
 }
 
 .wcmlim_cart_valid_err {
