:lipstick: Add to white font

--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -1304,11 +1304,10 @@ body.layout-2 {
   color: #fff;
   margin: 1rem 0;
   .no-stock__container{
-    font-size: 1.2rem;
-    font-weight: 500;
+    font-size: 1.5rem;
+    font-weight: 800;
     padding: 1rem;
-    text-align: center;
-    color: red
+    color: white
   }
 }
 
