:lipstick: Agotado no padding on sides

--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -1306,7 +1306,7 @@ body.layout-2 {
   .no-stock__container{
     font-size: 1.5rem;
     font-weight: 800;
-    padding: 0.5rem;
+    padding: 0 0.5rem;
     color: white
   }
 }
