--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -1145,6 +1145,8 @@ body.layout-2 {
             margin-top: 0;
           }
 
+          .more-notice__check
+
           .woocommerce-variation-add-to-cart {
             .quantity {
               display: none !important;
