--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -237,7 +237,9 @@
         .more-notice__button{
           color: black;
           background-color: white;
-          padding: 5px 20px;
+          padding: 15px 20px;
+          font-size: .75714rem;
+          font-weight: 700;
         }
       }
 
