:lipstick: Make it a button

--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -235,11 +235,14 @@
         padding-bottom: 1.42857rem;
 
         .more-notice__button{
-          color: black;
-          background-color: white;
-          padding: 15px 20px;
-          font-size: .75714rem;
-          font-weight: 700;
+          @include btn(#fff, #383838, #2c2c2d);
+          color: #fff !important;
+          padding: 0 2rem !important;
+          // color: black;
+          // background-color: white;
+          // padding: 15px 20px;
+          // font-size: .75714rem;
+          // font-weight: 700;
         }
       }
 
