--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -234,6 +234,12 @@
         font-size: 1rem;
         padding-bottom: 1.42857rem;
 
+        .more-notice{
+          display: flex;
+          flex-direction: column;
+          gap: 15px;
+        }
+
         .more-notice__button{
           @include btn(#fff, #383838, #2c2c2d);
           color: #fff !important;
