--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -1,12 +1,18 @@
 .envios-main{
     padding: 0 10%;
 
-    @media (max-width:768px){
-        padding: 0 20px;
-    }
+
 }
 
 .envios-container{
     display: flex;
     align-items: center;
+}
+
+
+@media (max-width:768px){
+    .envios-main{
+    padding: 0 20px;
+        
+    }
 }
