--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -4,8 +4,9 @@
 
 .envios-main__title{
     text-align: center;
-    font-size: 2.1rem;
-    font-weight: 700;
+    font-size: 3rem;
+    font-weight: 800;
+    padding: 30px 0;
 }
 
 .envios-container{
@@ -13,6 +14,11 @@
     align-items: center;
 }
 
+.envios-container__left__title .envios-container__right__title{
+    font-size: 2rem;
+    font-weight: 800;
+    padding: 15px 0;
+}
 
 @media (max-width:768px){
     .envios-main{
