:lipstick: Add title

--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -14,7 +14,7 @@
     align-items: center;
 }
 
-.envios-container__left__title .envios-container__right__title{
+.envios-container__left__title,.envios-container__right__title{
     font-size: 2rem;
     font-weight: 800;
     padding: 15px 0;
