:lipstick: Text center

--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -22,6 +22,7 @@
     font-size: 2rem;
     font-weight: 800;
     padding: 15px 0;
+    text-align: center;
 }
 
 .envios-container__left__content, .envios-container__right__content{
