--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -31,6 +31,12 @@
     gap: 10px;
 }
 
+.envios-container--important{
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
+
 @media (max-width:768px){
     .envios-main{
     padding: 0 20px;
