--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -60,7 +60,7 @@
 }
 @media (max-width:768px){
     .envios-main{
-    padding: 0 20px 3% 20px;
+    padding: 0 20px 20px 20px;
     }
 
     .envios-container{
