:lipstick: Add responsiveness

--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -70,5 +70,9 @@
     .envios-container__left, .envios-container__right{
         width: 100%;
     }
+
+    .envios-container__back{
+        width: 100%;
+    }
     
 }
