--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -59,6 +59,10 @@
     color: #fff !important;
     padding: 0 2.1rem !important;
 }
+
+.envios-container--first-check{
+    padding: 10px 0;
+}
 @media (max-width:768px){
     .envios-main{
     padding: 0 20px 20px 20px;
