--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -63,6 +63,11 @@
 .envios-container--first-check{
     padding: 10px 0;
 }
+
+
+.envios-container__left{
+    border-right: 2px solid black;
+}
 @media (max-width:768px){
     .envios-main{
     padding: 0 20px 20px 20px;
