:lipstick: Eliminate border in envios

--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -84,5 +84,9 @@
     .envios-container__back{
         width: 100%;
     }
+
+    .envios-container__left{
+        border-right: 0px solid black;
+    }
     
 }
