--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -20,12 +20,13 @@
 
 .envios-container__left, .envios-container__right{
     width: 50%;
-    padding: 30px 0;
+    padding: 0 20px;
 }
 
 .envios-container__left__title,.envios-container__right__title{
     font-size: 2rem;
     font-weight: 800;
+    padding: 15px 0;
     text-align: center;
 }
 
