--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -20,7 +20,7 @@
 
 .envios-container__left, .envios-container__right{
     width: 50%;
-    padding: 0 20px;
+    padding: 30px 20px;
 }
 
 .envios-container__left__title,.envios-container__right__title{
