:sparkles: Update back button

--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -11,7 +11,6 @@
     font-size: 3rem;
     font-weight: 800;
     padding: 30px 0;
-    width: 100%;
 }
 
 .envios-container{
@@ -20,10 +19,6 @@
     line-height: 2rem;
 }
 
-.envios-main__header{
-    display: flex;
-    align-items: center;
-}
 
 .envios-container__left, .envios-container__right{
     width: 50%;
@@ -65,7 +60,7 @@
 .envios-container__back{
     @include btn(#fff, #383838, #2c2c2d);
     color: #fff !important;
-    padding: 0 2.1rem !important;
+    padding: 20px 2.1rem !important;
 }
 
 .envios-container--first-check{
