:lipstick: Update bottom main

--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -3,7 +3,7 @@
 @import "~slick-carousel/slick/slick";
 
 .envios-main{
-    padding: 0 10% 3% 10%;
+    padding: 0 10% 3% 0;
 }
 
 .envios-main__title{
