--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -2,15 +2,11 @@
 @import "mixins";
 @import "~slick-carousel/slick/slick";
 
-.envios-main{
-    padding: 0 10% 3% 0;
-}
-
 .envios-main__title{
     text-align: center;
     font-size: 3rem;
     font-weight: 800;
-    padding: 30px 0;
+    padding: 0 0 30px;
 }
 
 .envios-container{
@@ -64,7 +60,7 @@
 }
 
 .envios-container__back__container{
-    padding: 20px;
+    padding: 30px 0 0 30px;
 }
 
 .envios-container--first-check{
@@ -90,6 +86,10 @@
 
     .envios-container__left, .envios-container__right{
         width: 100%;
+    }
+
+    .envios-container__back__container{
+        padding: 30px;
     }
 
     .envios-container__back{
