:lipstick: Implement style changes

--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -231,8 +231,7 @@
   margin-bottom: 2rem;
 
   .order_review_container{
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-    padding: 1rem;
+    padding: 0 1rem;
 
     .order_review__main{
       display: flex;
