--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -246,7 +246,9 @@
       }
   
       .order-review__toggle__btn{
-        font-size: 2rem;
+        background: none;
+        border: none;
+        font-size: 2.5rem;
         transition: all 0.5s ease;
       }
     }
