--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -304,9 +304,9 @@
 .list-steps {
   display: flex;
   justify-content: space-between;
-  margin: 3rem 0;
+  padding: 1rem 0;
   @media (max-width: 800px) {
-    margin: 1rem 0;
+    padding: 0.5rem 0;
   }
 
   li {
