--- a/src/scss/envios.scss
+++ b/src/scss/envios.scss
@@ -2,6 +2,10 @@
 @import "mixins";
 @import "~slick-carousel/slick/slick";
 
+.main{
+    padding: 0 10%;
+}
+
 .envios-main__title{
     text-align: center;
     font-size: 3rem;
