--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -285,7 +285,6 @@
   .checkout_additional_info__content{
     display: flex;
     flex-direction: column;
-    gap: 15px;
   }
 
   .checkout_additional_info__element{
@@ -294,13 +293,14 @@
     padding: 10px;
     align-items: center;
     flex-wrap: wrap;
+    font-size: 1.2rem;
   }
 
  .checkout_additional_info__element__btn{
   color: #000;
   text-decoration: underline;
   font-weight: 800;
-  font-size: 0.9rem;
+  font-size: 1.2rem;
  }
 
 }
@@ -420,8 +420,9 @@ label[for=billing_district2] {
 .nav-steps {
   width: 40%;
   display: flex;
-  justify-content: space-between;
+  gap: 20px;
   align-items: center;
+  padding: 0.5rem 0;
   @media (max-width: 800px) {
     width: 70%;
   }
