--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -309,70 +309,7 @@
 
 
 .list-steps {
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem 0;
-  @media (max-width: 800px) {
-    padding: 0.5rem 0;
-  }
-
-  li {
-    list-style: none;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    @media (max-width: 800px) {
-      background: #AAABAD;
-      height: 60px;
-      justify-content: center;
-      text-transform: uppercase;
-      font-weight: bold;
-      font-size: 90%;
-      color: #fff;
-    }
-
-    &.active {
-      @media (max-width: 800px) {
-        background: #000;
-      }
-
-      &:after {
-        background: #000;
-      }
-    }
-
-    span {
-      display: flex;
-      background: #000;
-      color: #fff;
-      border-radius: 100%;
-      width: 1.8rem;
-      height: 1.8rem;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 0.5rem;
-      position: relative;
-      z-index: 2;
-      @media (max-width: 800px) {
-        display: none;
-      }
-    }
-
-    &:after {
-      content: '';
-      display: block;
-      width: 100%;
-      height: 4px;
-      position: absolute;
-      top: 14px;
-      background: #d2d2d2;
-      @media (max-width: 800px) {
-        display: none;
-      }
-    }
-  }
+  font-size: 1.4rem;
 }
 
 #order_review_heading,
