:lipstick: Add name

--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -308,15 +308,11 @@
 }
 
 
-.list-steps{
+.checkout-steps{
   font-size: 1.4rem;
-
-
-}
-
-.list-steps__step{
-  font-size: 2rem;
-  display: flex;
+  font-weight: bold;
+  text-align: center;
+  padding: 0.5rem 0;
 }
 
 #order_review_heading,
