--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -309,13 +309,22 @@
 
 
 .checkout-steps{
+  display: flex;
+  padding: 0.5rem 0;
+  align-items: center;
+  justify-content: center;
+  gap: 20px
+}
+
+.checkout-steps__title{
   font-size: 1.6rem;
   font-weight: 700;
   text-align: center;
-  padding: 0.5rem 0;
 }
 
 .checkout-steps__number{
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   padding: 10px; 
   background-color: #000;
