--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -323,14 +323,23 @@
 }
 
 .checkout-steps__number{
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   padding: 10px; 
   background-color: #000;
   color: #fff;
-  font-size: 1.6rem;
+  font-size: 1.3rem;
   text-align: center;
+  visibility: visible;
+}
+
+.checkout-steps__number--envio{
+  visibility: hidden;
+}
+
+.checkout-steps__number--pago{
+  visibility: hidden;
 }
 
 
