:lipstick: Correct on size

--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -336,10 +336,12 @@
 
 .checkout-steps__number--envio{
   visibility: hidden;
+  width: 0px;
 }
 
 .checkout-steps__number--pago{
   visibility: hidden;
+  width: 0px;
 }
 
 
