--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -313,7 +313,17 @@
   padding: 0.5rem 0;
   align-items: center;
   justify-content: center;
-  gap: 20px
+}
+
+.checkout-steps__step--info{
+  width: 100%;
+  height: 100%;
+}
+
+.checkout-steps__step{
+  visibility: hidden;
+  width: 0%;
+  height: 0%;
 }
 
 .checkout-steps__title{
@@ -334,15 +344,6 @@
   visibility: visible;
 }
 
-.checkout-steps__number--envio{
-  visibility: hidden;
-  width: 0px;
-}
-
-.checkout-steps__number--pago{
-  visibility: hidden;
-  width: 0px;
-}
 
 
 #order_review_heading,
