--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -315,15 +315,17 @@
   justify-content: center;
 }
 
-.checkout-steps__step--info{
-  width: 100%;
-  height: 100%;
-}
+
 
 .checkout-steps__step{
   visibility: hidden;
   width: 0%;
   height: 0%;
+}
+
+.checkout-steps__step--info{
+  width: 100%;
+  height: 100%;
 }
 
 .checkout-steps__title{
@@ -333,8 +335,8 @@
 }
 
 .checkout-steps__number{
-  width: 40px;
-  height: 40px;
+  // width: 40px;
+  // height: 40px;
   border-radius: 50%;
   padding: 10px; 
   background-color: #000;
