--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -318,14 +318,11 @@
 
 
 .checkout-steps__step{
-  visibility: hidden;
-  width: 0%;
-  height: 0%;
+  display: none;
 }
 
 .checkout-steps__step--info{
-  width: 100%;
-  height: 100%;
+  display: block;
 }
 
 .checkout-steps__title{
@@ -335,8 +332,8 @@
 }
 
 .checkout-steps__number{
-  // width: 40px;
-  // height: 40px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   padding: 10px; 
   background-color: #000;
