:sparkles: Change name of theme

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name: Skullcandy Dev
-Text Domain: skullcandy Dev
-Version: 1.1
+Theme Name: Skullcandy Prod
+Text Domain: skullcandy Prod
+Version: 1.2
 Requires at least: 4.7
 Requires PHP: 5.2.4
 Description: Developed for Skullcandy
-Author: Gabriel Mondragón <gabriel@mondragon.pe>
+Author: Developed by Elmer Escandón, Creator Gabriel Mondragon <gabriel@mondragon.pe>
 Author URI: http://mondragon.pe/
 Theme URI: http://mondragon.pe/
 */
