:sparkles: Console.log current_step

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: Skullcandy Prod
-Text Domain: skullcandy Prod
+Theme Name: Skullcandy Dev
+Text Domain: skullcandy Dev
 Version: 1.2
 Requires at least: 4.7
 Requires PHP: 5.2.4
