:lipstick: Update nav-menu-mobile

--- a/src/scss/_menu_mobile.scss
+++ b/src/scss/_menu_mobile.scss
@@ -38,6 +38,10 @@
         position: relative;
       }
 
+      .header-ofertas{
+        font-weight: 600;
+        color:red;
+      }
       .dropdown {
         position: relative;
 
