:sparkles: Create forms

--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -164,6 +164,29 @@
   .checkout-title{
     padding: 1.5rem 0;
   }
+
+  .coupon-container{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    border: 1px solid #000;
+    background-color: #f0f0f0;   
+    text-align: center;
+
+    .coupon-container__title{
+      font-size: 1.5rem;
+      font-weight: 700;
+      padding: 0.4rem 0;
+    }
+    
+    .coupon-container__link{
+      font-size: 1.2rem;
+      font-weight: 700;
+      padding: 0.4rem 0;
+      text-decoration: underline;
+      @include btn(#fff, #383838, #2c2c2d);
+    }
+  }
 }
 
 #customer_details {
