--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -168,14 +168,14 @@
   .coupon-container{
     display: flex;
     flex-direction: column;
-    gap: 20px;
     border: 1px solid #000;
     background-color: #f0f0f0;   
     text-align: center;
+    padding: 10px;
 
     .coupon-container__title{
-      font-size: 1.5rem;
-      font-weight: 700;
+      font-size: 1.1rem;
+      font-weight: 500;
       padding: 0.4rem 0;
     }
     
