:lipstick: Change border in values

--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -28,7 +28,7 @@
   .coupon-container{
     display: flex;
     flex-direction: column;
-    border: 1px solid #000;
+    border: 1px solid #ccc;
     background-color: #f0f0f0;   
     text-align: center;
     padding: 10px;
