--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -125,7 +125,7 @@
 .shop-features{
   display: flex;
   justify-content: space-between;
-  padding: 0 5%;
+  padding: 20px 5%;
   flex-direction: row;
 
   @media (max-width: 768px) {
@@ -137,9 +137,9 @@
 .shop-features__container{
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  width: 200px;
+  width: 250px;
+  gap:15px;
 }
 
 .shop-features__container__info{
@@ -147,7 +147,7 @@
 }
 
 .shop-features__container__info__title{
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-weight: 700;
   margin-bottom: 1rem;
 }
