--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -469,3 +469,39 @@ label[for=billing_district2] {
     display: block;
   }
 }
+
+.shop-features{
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 5%;
+  flex-direction: row;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.shop-features__container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 250px;
+  gap:15px;
+}
+
+.shop-features__container__info{
+  text-align: center;
+}
+
+.shop-features__container__info__title{
+  font-size: 1rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.shop-features__container__info__subtitle{
+  font-size: 0.7rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
