:lipstick: Add sport section

--- a/src/scss/landing_product.scss
+++ b/src/scss/landing_product.scss
@@ -6,6 +6,8 @@
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: center;
+    background-color: #000;
 
     picture {
       display: flex;
