--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -28,6 +28,7 @@
   @media (max-width: 768px) {
     display: block;
     height: auto;
+    padding: 20px 20px 0px 20px;
   }
 
   section {
@@ -158,6 +159,7 @@
   margin-bottom: -3px;
   @media (max-width: 768px) {
     flex-direction: column;
+    padding: 20px 20px 0px 20px;
   }
 
   .media {
@@ -229,5 +231,9 @@
   img {
     width: 100%;
     height: auto;
+  }
+
+  @media (max-width: 768px) {
+    padding: 20px 20px 0px 20px;
   }
 }
