--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -158,7 +158,7 @@
   margin-bottom: -3px;
   @media (max-width: 768px) {
     flex-direction: column;
-    padding: 20px 20px 0px 20px;
+    padding: 20px 20px 40px 20px;
   }
 
   .media {
@@ -193,7 +193,7 @@
 
   .slick-dots {
     position: absolute;
-    bottom: 2rem;
+    bottom: 4rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -205,8 +205,8 @@
 
       button {
         display: block;
-        width: .75rem;
-        height: .75rem;
+        width: 1.75rem;
+        height: 1.75rem;
         background: #ddd;
         border-radius: 100%;
         font-size: 0;
@@ -216,7 +216,8 @@
 
       &.slick-active {
         button {
-          background: #000;
+          width: 1.25rem;
+          height: 1.25rem;
         }
       }
     }
