--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -79,6 +79,9 @@
 
 .products {
   @include product;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .woocommerce-pagination {
