--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -67,7 +67,7 @@
   .product {
     margin: 0;
     padding: 1.42857rem 3rem !important;
-    width: 33%;
+    width: 33% !important;
     @media (max-width: 768px) {
       width: 50% !important;
     }
