:lipstick: Update product position

--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -80,7 +80,7 @@
 .products {
   @include product;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 
