--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -65,9 +65,9 @@
 
 @mixin product {
   .product {
-    margin: 0;
+    margin: 0 !important;
     padding: 1.42857rem 3rem !important;
-    width: 33% !important;
+    width: 30% !important;
     @media (max-width: 768px) {
       width: 50% !important;
     }
