:lipstick: Add checkbox style

--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -179,3 +179,40 @@
   font-size: 12px;
   font-weight: 500;
 }
+
+.filter-checkbox {
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  margin: 20px;
+}
+
+.filter-checkbox p {
+  font-weight: bold;
+}
+
+.filter-checkbox__option {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.filter-checkbox__option__input {
+  margin-right: 10px;
+  appearance: none;
+  border: 1px solid black;
+  width: 16px;
+  height: 16px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.filter-checkbox__option__input:checked {
+  background-color: black;
+  border: 1px solid white;
+}
+
+.filter-checkbox__option__input:checked + p {
+  color: black;
+}
