--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -180,18 +180,7 @@
   font-weight: 500;
 }
 
-.filter-checkbox {
-  background-color: white;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  margin: 20px;
-}
-
-.filter-checkbox p {
-  font-weight: bold;
-}
-
+// CheckBox
 .filter-checkbox__option {
   display: flex;
   align-items: center;
