--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -183,18 +183,18 @@
 // CheckBox
 .filter-checkbox{
   display: flex;
+  align-items: center;
+  font-size: 12px;
+  font-weight: 500;
+  border-bottom: 1px solid #000;
 }
 
 .filter-checkbox-container{
-  font-size: 12px;
-  font-weight: 500;
   text-transform: uppercase;
   display: flex;
   gap: 10px;
 }
 .filter-checkbox__option {
-  font-size: 12px;
-  font-weight: 500;
   text-transform: uppercase;
   display: flex;
   align-items: center;
