--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -189,6 +189,11 @@
   border-bottom: 1px solid #000;
 }
 
+.filter-checkbox-title{
+  font-size: 1rem;
+  font-weight: 700;
+}
+
 .filter-checkbox-container{
   text-transform: uppercase;
   display: flex;
@@ -218,4 +223,20 @@
 
 .filter-checkbox__option__input:checked + p {
   color: black;
+}
+
+.filter__section--buttons{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+
+
+.filter__section__button{
+  background-color: #000;
+  color: #fff;
+  border: none;
+  border-radius: 0;
+  padding: 10px 20px;
 }
