--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -175,6 +175,8 @@
   padding: 10px 20px;
   margin: 0 -5px;
   cursor: pointer;
+  // Add transition
+  transition: all 0.3s ease-in-out;
 }
 
 .filter__section__button--active{
