--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -166,6 +166,10 @@
   justify-content: start;
   flex-wrap: wrap;
   padding: 20px 0;
+
+  @media (max-width: 768px) {
+    justify-content: center;
+  }
 }
 
 .filter__section__button{
@@ -177,6 +181,10 @@
   padding: 10px 20px;
   margin: 0 -5px;
   cursor: pointer;
+
+  @media (max-width: 768px) {
+    flex-grow: 1;
+  }
 }
 
 .filter__section__button--active{
