--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -82,6 +82,11 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+
+  @media (max-width: 768px) {
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .woocommerce-pagination {
