--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -208,3 +208,35 @@
   border-bottom: 2.5px solid black;
   font-weight: 700; 
 }
+
+.slick-dots {
+  position: absolute;
+  bottom: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+
+  li {
+    list-style: none;
+    margin: 0 .25rem;
+
+    button {
+      display: block;
+      width: 1.75rem;
+      height: 1.75rem;
+      background: #ddd;
+      border-radius: 100%;
+      font-size: 0;
+      border: none;
+      transition: .2s ease-in;
+    }
+
+    &.slick-active {
+      button {
+        width: 1.25rem;
+        height: 1.25rem;
+      }
+    }
+  }
+}
