--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -139,6 +139,8 @@
   @media (max-width: 768px) {
     flex-direction: column;
     align-items: center;
+    gap: 15px;
+    padding: 5px ;
   }
 }
 
@@ -148,6 +150,12 @@
   align-items: center;
   width: 300px;
   gap:15px;
+  
+  @media (max-width: 768px) {
+    width: 100%;
+    flex-direction: row;
+    align-items: flex-start;
+   }
 }
 
 .shop-features__container__info{
