:lipstick: Add hover

--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -197,7 +197,7 @@
   flex-grow: 1;
   transition: 0.3s;
   
-  :hover{
+  &:hover{
     color: white;
     font-weight: 700;
     background-color: black; 
