:lipstick: Only add more font weight

--- a/src/scss/_menu_mobile.scss
+++ b/src/scss/_menu_mobile.scss
@@ -30,8 +30,8 @@
       }
 
       .header {
-        font-size: .75rem;
-        font-weight: 400;
+        font-size: 0.75rem;
+        font-weight: 700;
         padding: 1.27143rem 1.21429rem;
         text-transform: uppercase;
         display: block;
@@ -39,7 +39,8 @@
       }
 
       .header-ofertas{
-        font-weight: 600;
+        font-size: 0.75rem;
+        font-weight: 700;
         color:red;
       }
       .dropdown {
