--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -93,7 +93,7 @@
       img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
       }
     }
 
