--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -93,7 +93,12 @@
       img {
         width: 100%;
         height: 100%;
-        object-fit: contain;
+        object-fit: cover;
+
+        @media (max-with: 551px){
+          object-fit: contain;
+
+        }
       }
     }
 
