--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -23,7 +23,7 @@
   grid-template-areas: "featured featured second" "featured featured third";
   height: 64vw;
   @media (min-aspect-ratio: 5/4) {
-    height: calc(100vh - 58px);
+    // height: calc(100vh - 58px);
   }
   @media (max-width: 768px) {
     display: block;
@@ -93,7 +93,7 @@
       img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: fill;
       }
     }
 
