:bug: Correct css

--- a/src/scss/ancs.scss
+++ b/src/scss/ancs.scss
@@ -39,6 +39,6 @@
     border-radius: 100px;
     background-color: #D1D3CE;
     color: #131313;
-    align-items: center
+    align-items: center;
     justify-content: center;
 }
