--- a/src/scss/ancs.scss
+++ b/src/scss/ancs.scss
@@ -1,7 +1,7 @@
 
 .main_anc{
     font-family: 'Helvetica Neue LT';
-    padding: 0 5%;
+    padding: 0 10%;
     background-color: black;
 }
 
@@ -11,13 +11,13 @@
 
 .image_anc{
     border-radius: 100px;
-    height: 100vh;
+    height: calc(100vh - 120px)!important;  
     width: auto;
-    max-width: 50%;
+    max-width: 50%!important;
 
     @media (max-width: 768px){
-        max-width: 100%;
-        height: auto;
+        max-width: 100%!important;
+        height: auto!important;
     }
 }
 
