--- a/src/scss/ancs.scss
+++ b/src/scss/ancs.scss
@@ -1,7 +1,7 @@
 
 .main_anc{
     font-family: 'Helvetica Neue LT';
-    padding: 0 10%;
+    padding: 20px 10% 0px 10%;
     background-color: black;
 }
 
@@ -50,3 +50,9 @@
 .text_anc{
     font-size: 1.3rem;
 }
+
+
+.list_anc{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;}
