:lipstick: Modify values

--- a/src/scss/ancs.scss
+++ b/src/scss/ancs.scss
@@ -56,3 +56,9 @@
     display: flex;
     flex-direction: column;
     gap: 20px;}
+
+.list_item_anc{
+    font-size: 1.2rem;
+    color: #131313;
+    font-weight: 600;
+}
