:lipstick: Correct more style in subtitle

--- a/src/scss/ancs.scss
+++ b/src/scss/ancs.scss
@@ -1,6 +1,5 @@
 
 .main_anc{
-    font-family: 'Helvetica Neue LT';
     padding: 20px 10% 0px 10%;
     background-color: black;
 }
@@ -43,8 +42,13 @@
 }
 
 .header_anc{
+    font-family: 'Helvetica Neue LT';
     font-size: 3.3rem;
     color: #A98567;
+}
+
+.subtitle_anc{
+    font-family: 'Helvetica Neue LT';
 }
 
 .text_anc{
