:lipstick: Add items as flex

--- a/src/scss/ancs.scss
+++ b/src/scss/ancs.scss
@@ -62,7 +62,12 @@
     gap: 20px;}
 
 .list_item_anc{
+    display: flex;
+    gap: 10px;
     font-size: 1.2rem;
     color: #131313;
     font-weight: 600;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
